# pybacktestchain_ss

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
blockchain/: backtest.pkl
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pybacktestchain_ss/: blockchain.py  broker.py  data_module.py  portfolio_strategies.py  pybacktestchain.py  streamlit_app.py  test.ipynb  test2.ipynb  test_notebook.ipynb  utils.py
src/pybacktestchain_ss/backtests/: AmberHorseTailor.csv  AmberTigerEngineer.csv  BlackEagleSoldier.csv  BlackFoxEngineer.csv  BlackJaguarFarmer.csv  BlackLeopardNurse.csv  BlackLionMechanic.csv  BlackLynxPlumber.csv  BlueFalconAstronaut.csv  BlueHorseMechanic.csv  BluePantherDoctor.csv  BlueWolfSoldier.csv  BrownCheetahDoctor.csv  BrownEagleArchitect.csv  GoldCheetahMechanic.csv  GoldGorillaArchitect.csv  GreenEagleBlacksmith.csv  GreyHawkChef.csv  GreyJaguarArchitect.csv  GreyLeopardMechanic.csv  GreyLionPilot.csv  IndigoBearPilot.csv  IndigoCobraEngineer.csv  IndigoSharkArchitect.csv  MagentaCheetahDoctor.csv  MagentaFoxMechanic.csv  MagentaHorseBlacksmith.csv  MagentaLionChef.csv  MagentaPantherDoctor.csv  MagentaSharkPilot.csv  OrangeCobraChef.csv  OrangeFalconMechanic.csv  PinkLionMechanic.csv  PinkTigerPlumber.csv  PurpleCobraLawyer.csv  PurpleHawkFirefighter.csv  PurpleOwlArtist.csv  PurpleWolfArchitect.csv  RedFalconCarpenter.csv  RedFoxCarpenter.csv  (+26 more)
src/pybacktestchain_ss/blockchain/: backtest.pkl
tests/: test_blockchain.py  test_broker.py  test_data_module.py  test_imports.py  test_portfolio_strategies.py
