[tool.poetry]
name = "pybacktestchain_ss"
version = "0.6.0"
description = "Enchancing the pybacktestchain package. Made by Samuli Salonen as the individual assignment for the M203 Python course."
authors = ["Samuli Salonen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.22,<2.1"
yfinance = "^0.2.51"
sec-cik-mapper = "^2.1.0"
scipy = "<1.14.0"
numba = "^0.60.0"
pybacktestchain = "^0.2.1"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
python-semantic-release = "^9.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.semantic_release] 
version_variable = "pyproject.toml:version" 
version_toml = [ 
"pyproject.toml:tool.poetry.version", 
] 
